# GenieHive

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
configs/: control.example.yaml  control.foundation.example.yaml  control.singlebox.example.yaml  control.singlebox.p40.example.yaml  node.example.yaml  node.singlebox.forge.example.yaml  node.singlebox.llamacpp.example.yaml  node.singlebox.llamafile.example.yaml  node.singlebox.ollama.example.yaml  node.singlebox.p40-triple.example.yaml  roles.agentic.example.yaml  roles.belbin.example.yaml  roles.disney.example.yaml  roles.example.yaml  roles.foundation.archive.yaml  roles.singlebox.p40.example.yaml  roles.sixhats.example.yaml  roles.surgical-team.example.yaml  roles.xp.example.yaml
docs/: apple_silicon_kong_fabric.md  architecture.md  demo.md  deployment.md  forge_integration.md  foundation_gateway_baseline.md  foundation_gateway_operations.md  foundation_gateway_roadmap.md  llm_demo.md  local_llm_evaluation.md  pi_ai_integration.md  reverse_proxy.md  roadmap.md  schemas.md  translation_support.md
scripts/: check_singlebox_health.sh  demo_client_agent.py  demo_inspect.sh  ingest_benchmark_report.py  launch_p40_triple.sh  p40_triple_cpu.sh  p40_triple_gpu0.sh  p40_triple_gpu1.sh  run_benchmark_workload.py  run_control.sh  run_control_p40_lan.sh  run_control_p40_zerotier.sh  run_control_singlebox.sh  run_node.sh  run_node_singlebox.sh  smoke_foundation_archive.py  smoke_test.py  start_p40_triple_llamacpp.sh  test_qwen35_server_cuda_container.sh  tmux_session_status.sh
tests/: test_admin_cli.py  (+16 more)
(+26 files in other folders)
